# nerd-font-symbols

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix  justfile
crates/generator/: Cargo.toml
crates/generator/src/: main.rs
crates/nerd-font-symbols/: Cargo.toml
crates/nerd-font-symbols/src/: cod.rs  dev.rs  fa.rs  fae.rs  iec.rs  lib.rs  logos.rs  md.rs  oct.rs  ple.rs  pom.rs  seti.rs  weather.rs
