[workspace]
members = ["crates/nerd-font-symbols", "crates/generator"]
resolver = "2"

[workspace.package]
authors = ["Asger Juul Brunshøj"]
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plul/nerd-font-symbols"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "warn"
missing_debug_implementations = "warn"
